# LatentScope

./: README.md  pyproject.toml
data/: saved_groups.json  truth_domains.json
data/operators/: capitals.npz
data/sessions/: History_Capitals.json
latent_scope/: __init__.py  __main__.py  app.py  core.py  runtime.py  utils.py
latent_scope/engine/: operator_miner.py  pivot_probe.py  projections.py  sae.py  sae_analyzer.py  stats.py  surgeon.py  training.py  truth_axis.py
latent_scope/ui/: shell.py  workspace.py
