[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latent-scope"
version = "0.1.0"
description = "Interactive activation space explorer for transformer models"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.16",
    "mlx-lm>=0.18",
    "flask>=3.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
]

[project.scripts]
latent-scope = "latent_scope.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["latent_scope"]
